Validation and google api

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,10 @@ spring.jpa.hibernate.ddl-auto = update
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.hibernate.type=trace
+
+# ===============================
+# = GOOGLE API
+# ===============================
+
+google.api.url = https://maps.googleapis.com/maps/api/geocode/json?address=
+google.api.key = AIzaSyBm3xh9oZP1ksMWcMzVaZQevWlrtb8tIgc
