Adjusts in project

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 # = DATA SOURCE
 # ===============================
 
-spring.datasource.url = jdbc:mysql://localhost:3306/stoom?useSSL=false
-spring.datasource.username = root
-spring.datasource.password = 321Mudar@
+spring.datasource.url
+spring.datasource.username
+spring.datasource.password
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
